# yelp-spark-analytics

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
analytics/: consultas.py  consultas_book.ipynb
etl/: load_business_mongo.py  load_checkin_mongo.py  load_review_aiven.py  load_tip_mongo.py  load_user_crdb.py  pipeline.py  run_pipeline.py  setup_crdb.py
